Ajustes al sitio

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,8 +19,8 @@
   <link href="{{ $style.Permalink }}" rel="stylesheet" media="screen"/>
 
   {{ "<!--Favicon-->" | safeHTML }}
-  <link rel="shortcut icon" href="{{ `images/logo.png` | absURL }}" type="image/x-icon">
-  <link rel="icon" href="{{ `images/logo.png` | absURL }}" type="image/x-icon">
+  <link rel="shortcut icon" href="{{ `images/favicon.ico` | absURL }}" type="image/x-icon">
+  <link rel="icon" href="{{ `images/favicon.ico` | absURL }}" type="image/x-icon">
 
   
   {{ with .Params.Image }}
