Ajustes al layout

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,7 +18,7 @@
                   </ul>
               </div>
               <div class="col col-md-4 mt-5">
-                  <h3 class="text-uppercase">Company</h3>
+                  <h3 class="text-uppercase">Empresa</h3>
                   <ul>
                     {{ range site.Menus.company }}
                       <li><a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
@@ -26,13 +26,21 @@
                   </ul>
               </div>
               <div class="col col-md-4 mt-5">
-                  <h3 class="text-uppercase">Product</h3>
+                  <h3 class="text-uppercase">Social</h3>
+                  <ul>
+                    {{ range site.Menus.branch }}
+                      <li><a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
+                    {{ end }}
+                  </ul>
+              </div>
+              <div class="col col-md-4 mt-5">
+                  <h3 class="text-uppercase">Recursos</h3>
                   <ul>
                     {{ range site.Menus.product }}
                       <li><a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
                     {{ end }}
                   </ul>
-              </div>
+              </div>              
           </div>
 
           <div class="row justify-content-center mr-5 ml-5 p-5">
