--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,8 +2,8 @@
 
 <nav class="navbar navbar-light navbar-expand-md navigation-clean-button mt-5">
   <div class="container">
-    <a class="navbar-brand text-uppercase pl-3 pr-3" href="{{ site.BaseURL }}" style="font-weight: bold;color: #ffffff;background: #000000;">
-      <img src="images/logo.jpg">
+    <a class="navbar-brand text-uppercase pl-3 pr-3" href="{{ site.BaseURL }}" style="">
+      <img src="images/logo.jpg" width="100">
     </a>
       <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
       <div
