--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,60 +1,59 @@
-
 <!-- Branding -->
 {{ partial "page-branding.html" . }}
 
 <div class="footer-clean">
-  <footer>
-      <div class="container">
-          <div class="row justify-content-center mr-5 ml-5 p-5">
-              <div class="col col-md-4 mt-5">
-                  <h3 class="text-uppercase" style="color: rgb(0,0,0);">{{site.Params.company.country}}</h3>
-                  <ul>
-                      <li>{{site.Params.company.address}}</li>
-                      <li>{{site.Params.company.city}}</li>
-                      <li>{{site.Params.company.phone}}</li>
-                      <li class="mt-3 mb-4" style="color: rgb(0,0,0);">
-                        <a class="pt-5" href="mailto:{{site.Params.company.email}}" style="font-weight: bold;color: rgb(0,0,0);" target="_blank">{{site.Params.company.email}}</a>
-                      </li>
-                  </ul>
-              </div>
-              <div class="col col-md-4 mt-5">
-                  <h3 class="text-uppercase">Empresa</h3>
-                  <ul>
-                    {{ range site.Menus.company }}
-                      <li><a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
-                    {{ end }}
-                  </ul>
-              </div>
-              <div class="col col-md-4 mt-5">
-                  <h3 class="text-uppercase">Social</h3>
-                  <ul>
-                    {{ range site.Params.social }}
-                      <li><a href="{{ .URL | absURL }}">{{ .title }}</a></li>
-                    {{ end }}
-                  </ul>
-              </div>            
-          </div>
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center mr-5 ml-5 p-5">
+                <div class="col col-md-4 mt-5">
+                    <h3 class="text-uppercase" style="color: rgb(0,0,0);">{{site.Params.company.country}}</h3>
+                    <ul>
+                        <li>{{site.Params.company.address}}</li>
+                        <li>{{site.Params.company.city}}</li>
+                        <li>{{site.Params.company.phone}}</li>
+                        <li class="mt-3 mb-4" style="color: rgb(0,0,0);">
+                            <a class="pt-5" href="mailto:{{site.Params.company.email}}" style="font-weight: bold;color: rgb(0,0,0);" target="_blank">{{site.Params.company.email}}</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col col-md-4 mt-5">
+                    <h3 class="text-uppercase">Empresa</h3>
+                    <ul>
+                        {{ range site.Menus.company }}
+                        <li><a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
+                        {{ end }}
+                    </ul>
+                </div>
+                <div class="col col-md-4 mt-5">
+                    <h3 class="text-uppercase">Social</h3>
+                    <ul>
 
-          <div class="row justify-content-center mr-5 ml-5 p-5">
-              {{range site.Params.footer}}
-                  <div class="col col-md-4 mt-5">
-                      <h3 class="text-uppercase">{{.rol_name}}</h3>
-                      <ul>
-                          <li>{{.rol_representative}}</li>
-                          <li><a href="mailto:{{ .rol_email }}" style="font-weight: bold;color: rgb(0,0,0);">{{ .rol_email }}</a></li>
-                      </ul>
-                  </div>
-              {{end}}
-          </div>
-      </div>
-  </footer>
+                        <li><a href="https://twitter.com/cristianmarint">twitter</a><i class="fab fa-instagram"></i></li>
+                        <li>
+                            <a href="https://instagram.com/mossocafe/"></a>Instagram</li><i class="fab fa-twitter"></i></li>
+
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row justify-content-center mr-5 ml-5 p-5">
+                {{range site.Params.footer}}
+                <div class="col col-md-4 mt-5">
+                    <h3 class="text-uppercase">{{.rol_name}}</h3>
+                    <ul>
+                        <li>{{.rol_representative}}</li>
+                        <li><a href="mailto:{{ .rol_email }}" style="font-weight: bold;color: rgb(0,0,0);">{{ .rol_email }}</a></li>
+                    </ul>
+                </div>
+                {{end}}
+            </div>
+        </div>
+    </footer>
 </div>
 
-{{ "<!-- JS Plugins -->" | safeHTML }}
-{{ range site.Params.plugins.js}}
+{{ "
+<!-- JS Plugins -->" | safeHTML }} {{ range site.Params.plugins.js}}
 <script src="{{ .link | absURL }}"></script>
-{{ end }}
-
-{{ "<!-- Main Script -->" | safeHTML }}
-{{ $script := resources.Get "js/script.js" | minify}}
+{{ end }} {{ "
+<!-- Main Script -->" | safeHTML }} {{ $script := resources.Get "js/script.js" | minify}}
 <script src="{{ $script.Permalink }}"></script>
