--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -29,8 +29,7 @@
                     <ul>
 
                         <li><a href="https://twitter.com/cristianmarint">twitter</a><i class="fab fa-instagram"></i></li>
-                        <li>
-                            <a href="https://instagram.com/mossocafe/"></a>Instagram</li><i class="fab fa-twitter"></i></li>
+                        <li><a href="https://instagram.com/mossocafe/">Instagram</a><i class="fab fa-twitter"></i></li>
 
                     </ul>
                 </div>
